--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
-  chat-title="fk"
+  chat-title="심현태 챗봇"
   agent-id="b2f33de5-5c0a-45d7-8a49-31e68d778bdd"
   language-code="ko"
 ></df-messenger>
